<resources>
    <string name="app_name">AndroidBrowser</string>
    <string name="search">Search</string>
    <string name="search_url">Enter Url or Address</string>
    <string name="yahoo">Yahoo</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="snapchat">Snapchat</string>
    <string name="google">Google</string>
    <string name="bee">BEE</string>
    <string name="enter_url_or_address">Enter Url or Address</string>
</resources>