<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage">

    <EditText
        android:id="@+id/editText"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@color/teal_200"
        android:ems="10"
        android:hint="@string/enter_url_or_address"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/youtube"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toTopOf="@+id/facebook" />

    <Button
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/instagram"
        android:textAllCaps="false"
        app:backgroundTint="@color/design_default_color_secondary_variant"
        app:layout_constraintStart_toEndOf="@+id/youtube"
        app:layout_constraintTop_toTopOf="@+id/youtube" />

    <Button
        android:id="@+id/snapchat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/snapchat"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <Button
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintStart_toEndOf="@+id/snapchat"
        app:layout_constraintTop_toTopOf="@+id/snapchat" />

    <Button
        android:id="@+id/yahoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/yahoo"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintStart_toEndOf="@+id/google"
        app:layout_constraintTop_toTopOf="@+id/google" />
</androidx.constraintlayout.widget.ConstraintLayout>